# rust-kafka-benchmark

./: Cargo.toml  Dockerfile  LICENSE  compose.yaml
.github/workflows/: ci-cd.yml
src/: config.rs  consumer.rs  error.rs  logging.rs  main.rs  metrics.rs  monitor.rs  producer.rs  throughput.rs  types.rs
