[package]
name = "kafka-rust-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build", "tokio", "ssl-vendored"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
log = "0.4.28"
env_logger = "0.11.8"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# axum = "0.8.7"

# opentelemetry = "0.29.1"
# opentelemetry-prometheus = "0.29.1"
# opentelemetry-otlp = "0.29.0"
# opentelemetry_sdk = { version = "0.29.0", features = ["logs"]}
# opentelemetry-stdout = { version = "0.29.0", features = ["logs"]}
# opentelemetry-appender-tracing = "0.29.1"
#
# tracing = { version = "0.1.41", features = ["std"]}
# tracing-subscriber = { version = "0.3.20", features = ["env-filter","registry", "std", "fmt"]}
# tracing-opentelemetry = "0.32.0"
#
# prometheus = "0.14.0"


[profile.release]
opt-level = 3
