[package]
name = "kafka-rust-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build", "tokio", "ssl-vendored"]}

tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "sync"]}
axum = "0.8.8"

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
anyhow = "1.0.100"
thiserror = "2.0.17"

opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["logs"]}
opentelemetry-stdout = { version = "0.31.0", features = ["logs"]}
opentelemetry-appender-tracing = "0.31.1"

tracing = { version = "0.1.44", features = ["std"]}
tracing-subscriber = { version = "0.3.22", features = ["env-filter","registry", "std", "fmt"]}

[profile.release]
opt-level = 3
